; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/iwn/extr_if_iwn.c_iwn_scan_start.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/iwn/extr_if_iwn.c_iwn_scan_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211com = type { %struct.iwn_softc* }
%struct.iwn_softc = type { i32 }

@IWN_LED_LINK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ieee80211com*)* @iwn_scan_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iwn_scan_start(%struct.ieee80211com* %0) #0 {
  %2 = alloca %struct.ieee80211com*, align 8
  %3 = alloca %struct.iwn_softc*, align 8
  store %struct.ieee80211com* %0, %struct.ieee80211com** %2, align 8
  %4 = load %struct.ieee80211com*, %struct.ieee80211com** %2, align 8
  %5 = getelementptr inbounds %struct.ieee80211com, %struct.ieee80211com* %4, i32 0, i32 0
  %6 = load %struct.iwn_softc*, %struct.iwn_softc** %5, align 8
  store %struct.iwn_softc* %6, %struct.iwn_softc** %3, align 8
  %7 = load %struct.iwn_softc*, %struct.iwn_softc** %3, align 8
  %8 = call i32 @IWN_LOCK(%struct.iwn_softc* %7)
  %9 = load %struct.iwn_softc*, %struct.iwn_softc** %3, align 8
  %10 = load i32, i32* @IWN_LED_LINK, align 4
  %11 = call i32 @iwn_set_led(%struct.iwn_softc* %9, i32 %10, i32 20, i32 2)
  %12 = load %struct.iwn_softc*, %struct.iwn_softc** %3, align 8
  %13 = call i32 @IWN_UNLOCK(%struct.iwn_softc* %12)
  ret void
}

declare dso_local i32 @IWN_LOCK(%struct.iwn_softc*) #1

declare dso_local i32 @iwn_set_led(%struct.iwn_softc*, i32, i32, i32) #1

declare dso_local i32 @IWN_UNLOCK(%struct.iwn_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
